--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -39,3 +39,10 @@
 #logoutForm {
     display: inline-block;
 }
+
+#myMatchStarted > div {
+    background: #fff;
+    width: 400px;
+    padding: 20px;
+    margin-top: 100px;
+}
